# frostEngine

./: CMakeLists.txt
src/: fragment.glsl  game.h  main.cpp  shader.cpp  shader.h  sprite.cpp  sprite.h  stb_image.h  texture.cpp  texture.h  vertex.glsl  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
src/engine/: camera.cpp  camera.h  game_model.cpp  game_model.h  index_buffer.cpp  index_buffer.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  sprite.cpp  sprite.h  text.cpp  text.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
src/game/: collision.cpp  collision.h  collusion.cpp  collusion.h  game_object.cpp  game_object.h  igame.cpp  igame.h
