cmake_minimum_required(VERSION 3.26 FATAL_ERROR)
set(PROJECT_NAME frostEngine)
project(${PROJECT_NAME})
set(SOURCES
    src/main.cpp)
set(HEADERS)
add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)

add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
                    ${CMAKE_SOURCE_DIR}/res $<TARGET_FILE_DIR:${PROJECT_NAME}>/res)